css/custom-bootstrap.css
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,600&display=swap');
 
 /* CUSTOM SETTINGS FOR BOOTSRAP */


.h3 {
  font-weight: 300;
  color: #950740;
}


.collapse {
    opacity: 1;
}

.collapsing {
  position: relative;
  height: 0;
  overflow: hidden;
  transition: height .5s ease;
}


/* header */
.jumbotron {
  background-color: #1A1A1D;
  color: #fff;
}

.display-4 {
 color: #950740;
}

/* Containers  */



/* List items */

.list-group-item {
  color: rgba(255, 255, 255, 0.712);
  font-weight: 200;
  border: .5px solid #950740;
  background-color: transparent;;
}


/* Buttons */

.btn {
  color: rgba(255, 255, 255, 0.712);
  font-weight: 200;
} 
   .btn:hover {
     color: #fff;
   }

.btn:focus {
  outline: none;
  box-shadow: none;
}

footer .contact-btn {
  color: #950740;
  font-weight: 400;
  max-width: 150px;
}
  footer .contact-btn:hover {
    background-color: #950740;
  }

/* CARDS */

.card {
  color: #7e7e81;
  background-color: #202022;
}

.card-title {
  font-weight: 300;
  color: #950740 ;
}

.card-text {
  font-weight: 200;
  color: rgba(255, 255, 255, 0.712);
}

.card-link {
  color: #950740;
}
  .card-link:hover {
    color: rgba(255, 255, 255, 0.712);
  }

.card-img-top {
  opacity: .6;
}
  .card-img-top:hover {
    opacity: 1;
  }

  /* IMAGES */

  .img-thumbnail {
    border: none;
    padding: 0;
    max-height: 240px;
  }
    .img-thumbnail:hover {
      background-image: url()
    }

    @media (max-width: 420px) {
      .img-thumbnail {
        max-width: 150px;
      }
    }

  /* MODAL CONTACT */

.modal-content {
  background-color: #202022;
  font-weight: 200;
  border: .75px solid #950740;
  color: rgba(255, 255, 255, 0.712);
}

.modal-header {
  color: #950740;
  border-bottom: .5px solid #950740;
}

.modal-footer {
  justify-content: space-around;
  border-top: .5px solid #950740;
}
  .modal-footer .send-btn:hover {
    color: #079532;
    font-weight: 400;
    border: .5px solid #079532;
  }
  .modal-footer .close-btn:hover {
    color: #c3073f;
    font-weight: 400;
    border: .5px solid #c3073f;
  }

  #about p {
    font-weight: 300;
    color: rgba(255, 255, 255, 0.712);   
  }

